src/render/tests/snapshots/diagnostic_render__render__tests__singleline__1.snap
---
source: src/render/tests/singleline.rs
expression: result
---
error: Test message
 --> test_file.test:1:6
1 | test file contents
  |      ^^^^ test label
  = help: Change something
